Fixed Hot icon and Featured icon issue on mobile

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -1141,3 +1141,24 @@ fieldset.group-hidden {
    }
  }
 }
+
+
+// Forum page issue fixing for mobiles
+.posts-columns.columns-full .row .forum-icon {
+
+  @include breakpoint($mobile){
+    font-size: 30px;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+}
+
+body .view-display-id-stream_forum_page .show_hot .icon-Hottopic {
+
+  @include breakpoint($mobile){
+    margin-right: 50px;
+  }
+  
+}
